# gg

./: CMakeLists.txt  CPackConfig.cmake
.github/workflows/: CI.yml  release.yml
tests/: test.cpp
